# Game_Shop_Django

./: README.md  info.txt  pyproject.toml  test.py
game_shop/: .env  data.json  fill_db.py
game_shop/game_shop/: settings.py  urls.py
game_shop/shop_app/: admin.py  models.py  urls.py  views.py
game_shop/shop_app/migrations/: 0001_initial.py  0002_remove_game_copy_protection_remove_game_developer_and_more.py  0003_remove_game_img_game_path.py  0004_alter_game_platform.py  0005_alter_game_date_of_release_alter_game_date_updated_and_more.py  0006_alter_game_genre.py  0007_genre_alter_game_genre.py  0008_remove_game_genre_game_genre.py  0009_remove_game_date_updated.py  0010_alter_game_title.py
game_shop/shop_app/static/shop_app/: styles.css
game_shop/shop_app/templates/shop_app/: base.html  category.html  game_detail.html  genre_detail.html  genre_none.html  index.html  index2.html  search_results.html
game_shop/users/: urls.py  views.py
game_shop/users/migrations/: 0001_initial.py
game_shop/users/templates/users/: login.html  password_reset.html  password_reset_complete.htm  password_reset_confirm.html  password_reset_done.html  profile.html  signup.html
game_shop/utils/: data.json  fill_db.py
